2006-05-29 Robert Pearce <rob@bdt-home.demon.co.uk>
	* regression/resistor/resistor.asm: improved failure reporting
	  and added tests for the output pin not being swamped
	* src/stimuli.cc, src/stimuli.h: Adjusted default Zth values to
	  be more sensible (ZthWeak now > ZthPullUp). Also some debug
	  messages on wht looks like a dodgy condition. Need to follow up.
	* doc/gpsim.lyx: corrected some formatting.

2006-05-28 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.nsi: removed unneeded asprintf.dll from
	  the package, added possibility to define the SETUP_DIR from
	  the NSIS command line
	* doc/gpsimWin32.html: glib-2.8.6, gtk+-2.8.17, pango-1.12.1,
	  cairo-1.0.4
	* extras/graphic_lcd/src/gpsim_modules.cc,
	  extras/graphic_lcd/src/sed1520.cc,
	  extras/lcd/hd44780.cc: removed unneeded inclusion of config.h
	* extras/graphic_lcd/makefile.mingw: added, thanks to Xiaofan Chen
	* extras/lcd/makefile.mingw: corrected, thanks to Xiaofan Chen  
	* makefile.mingw: added rules doc and setup
	* plat/win32/fd2raw.cpp: report error messages

2006-05-28 Roy Rankin <rrankin@ihug.com.au>
	* src/gpsim_object.cc: Improve GNU demangling
	* modules/switch.cc, modules/switch.h,
	  regression/switch_test/switch_test.asm:
	- Fix infinite regression bug.

2006-05-27 Scott Dattalo <scott@dattalo.com>
	* src/ValueCollections.cc, src/ValueCollections.h,
	src/14bit-registers.cc: An indexed collection can now accommodate
	a disjoint set.
	* src/16bit-processors.h, src/16bit-processors.cc,
	src/dspic/dspic-processors.cc, src/dspic/dspic-processors.h,
	src/processor.h, src/processor.cc, src/pic-processor.h,
	src/14bit-processors.h,src/14bit-processors.cc,
	src/pic-processor.cc: The ProgramMemoryClass now uses the newly 
	added "disjoint set" feature of an IndexedCollection to provide
	access to configuration memory. E.g. 
	
	  romData[0x300000] = 0x1234

	will write 0x1234 to the configuration word at address 0x300000. 